@@ -144,6 +144,9 @@ Jon Yamokoski <jon@jonyamo.net>
 Lucas Hoffmann <l-m-h at web.de>
         elvi: commandlinefu
 
+Nils <krosos@autistici.org>
+        elvi: searx
+
 THANKS TO
 
 Brian Nelson           <bnelson@bloodclot.net>
