@@ -1,0 +1,7 @@
+searx surfraw
+Shell Users Revolutionary Front Rage Against the Web
+searx -c=music john coltrane
+Giant Steps
+searx -u=3 -c=vid rick astley
+Never Gonna Give You Up
+
