@@ -1,3 +1,7 @@
+2015-08-23  Jason Ryan <jasonwryan@gmail.com>
+
+	* new elvi: searx
+
 2014-09-20  Lucas Hoffmann <l-m-h at web.de>
 
 	* new elvi: commandlinefu
